--- a/menu_colores.html
+++ b/menu_colores.html
@@ -8,8 +8,8 @@
     <title>Barra de Navegación con Colores Personalizados</title>
     
 </head>
-<body background="black">
-    <nav class="navbar navbar-expand-lg" style="background-color: white;">
+<body >
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <a class="navbar-brand" href="#" style="color: #fff;"><img src="img/LOGOTIPO ESCURA XEMENEIES SERGI.jpg" class="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
